Fix spacing of cards

--- a/src/components/Projects/OutreachCard/styles.scss
+++ b/src/components/Projects/OutreachCard/styles.scss
@@ -1,4 +1,7 @@
 .root {
+  margin-top: 8px;
+  margin-bottom: 8px;
+
   iframe {
     margin-left: 16px;
     margin-bottom: 14px;
