--- a/src/components/Projects/styles.scss
+++ b/src/components/Projects/styles.scss
@@ -1,9 +1,3 @@
 .root {
   width: 100%;
-
-  .outreach {
-    &:not(:first-child) {
-      margin-top: 8px;
-    }
-  }
 }
